--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Ethan Schutzman",
   "private": true,
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js"
   },
   "dependencies": {
   }
