--- a/A1_raharrison2.vbproj
+++ b/A1_raharrison2.vbproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{00000000-0000-0000-0000-000000000000}</ProjectGuid>
+    <ProjectGuid>{99E48497-F66E-4CD7-8E24-7EEEC8553E91}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <StartupObject>
     </StartupObject>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace>A1_raharrison2</RootNamespace>
     <AssemblyName>ConsoleApplication</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Console</MyType>
@@ -63,6 +62,62 @@
     <Import Include="System.Diagnostics" />
     <Import Include="System.Linq" />
     <Import Include="System.Xml.Linq" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="index.html" />
+    <Content Include="package.json" />
+    <Content Include="server.js" />
+    <Content Include="styles.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".git\config" />
+    <None Include=".git\description" />
+    <None Include=".git\FETCH_HEAD" />
+    <None Include=".git\HEAD" />
+    <None Include=".git\hooks\applypatch-msg.sample" />
+    <None Include=".git\hooks\commit-msg.sample" />
+    <None Include=".git\hooks\fsmonitor-watchman.sample" />
+    <None Include=".git\hooks\post-update.sample" />
+    <None Include=".git\hooks\pre-applypatch.sample" />
+    <None Include=".git\hooks\pre-commit.sample" />
+    <None Include=".git\hooks\pre-push.sample" />
+    <None Include=".git\hooks\pre-rebase.sample" />
+    <None Include=".git\hooks\pre-receive.sample" />
+    <None Include=".git\hooks\prepare-commit-msg.sample" />
+    <None Include=".git\hooks\update.sample" />
+    <None Include=".git\index" />
+    <None Include=".git\info\exclude" />
+    <None Include=".git\logs\HEAD" />
+    <None Include=".git\logs\refs\heads\master" />
+    <None Include=".git\logs\refs\remotes\origin\HEAD" />
+    <None Include=".git\logs\refs\remotes\upstream\master" />
+    <None Include=".git\objects\07\b4b09c69c3f1f43831ea201c3bd586c3f84e1d" />
+    <None Include=".git\objects\16\9397323b7e2c8687b46bb5848be98bc2873751" />
+    <None Include=".git\objects\1d\cf7165b901ce1bbbce28b4879269f9823b547e" />
+    <None Include=".git\objects\29\64181cc5569b94d53e72f9167acbdd13429612" />
+    <None Include=".git\objects\2c\2fbdbf151f12d03761dfdd9ec5caccedb8327e" />
+    <None Include=".git\objects\3d\98231dba2d81f9e13e2a24d9ca35a34b7b8cfb" />
+    <None Include=".git\objects\8c\012087bc20644816c73f667a38b60fd18dd9e9" />
+    <None Include=".git\objects\a1\9061d115b14cede84424654ee38b00b72c0963" />
+    <None Include=".git\objects\a2\60661e44cb0c8a2e460465c86887ac431345a8" />
+    <None Include=".git\objects\b6\e9edeeb15fcc8ee36a3050e774955adf26145f" />
+    <None Include=".git\objects\b7\146505bb4e6bfaa784f2172ddb3cbb3673a688" />
+    <None Include=".git\objects\bc\a03e89ea63e5e0a30a3279e4bec04e2796c4d6" />
+    <None Include=".git\objects\df\fe501dad32684b8407d164fafa54db8fbe72ab" />
+    <None Include=".git\ORIG_HEAD" />
+    <None Include=".git\packed-refs" />
+    <None Include=".git\refs\heads\master" />
+    <None Include=".git\refs\remotes\origin\HEAD" />
+    <None Include=".git\refs\remotes\upstream\master" />
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include=".git\lfs\objects\logs\" />
+    <Folder Include=".git\lfs\tmp\objects\" />
+    <Folder Include=".git\objects\info\" />
+    <Folder Include=".git\objects\pack\" />
+    <Folder Include=".git\refs\tags\" />
+    <Folder Include="My Project\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.Targets" />
   <ProjectExtensions>
