--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "lh-4241-simple-node",
   "version": "0.1.0",
   "description": "WPI CS 4241 first assignment",
-  "author": "Lane Harrison",
+  "author": "Quinn Averill",
   "private": true,
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
